Subscriber report interface.
